# approxim

./: Cargo.toml  README.md  update_version.sh
.github/workflows/: test.yml
examples/exponential_decay/: Cargo.toml
examples/exponential_decay/src/: main.rs
src/: abs_diff_eq.rs  lib.rs  macros.rs  relative_eq.rs  ulps_eq.rs
tests/: abs_diff_eq.rs  common.rs  macro_import.rs  macros.rs  relative_eq.rs  ulps_eq.rs
