[package]
name = "approxim"
version = "0.5.1"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
license = "Apache-2.0"
description = "Approximate floating point equality comparisons and assertions."

documentation = "https://docs.rs/approxim"
homepage = "https://github.com/jonaspleyer/approxim"
repository = "https://github.com/jonaspleyer/approxim"
readme = "README.md"

keywords = [
    "approximimate",
    "assert",
    "comparison",
    "equality",
    "float",
]

[package.metadata.docs.rs]
features = ["std", "num-complex"]

[lib]
name = "approxim"

[features]
default = ["std"]
std = []

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
num-complex = { version = "0.4.6", optional = true }
